2010-05-10  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* 10_interop.mof, default.reg.in, instance.c, instance.h, 
	  interopProvider.c:
	[ 2999667 ] Handle DeliveryFailureTime internally

2010-04-30  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerRegister.c:
	[ 2980524 ] providerRegister should collate namespaces
	(patch by Klaus Kaempf)

	* profileProvider.c, providerMgr.c, 10_interop.mof, default.reg.in:
	[ 2994921 ] Make RegisteredProfile for PRP a static instance

2010-04-27  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* instance.c, constClass.c:
	[ 2993137 ] CMSetProperty fails for CMPIInstance for EmbeddedObject

2010-04-20  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* getSchema.sh.pre.in:
	[ 2990169 ] Bump downloaded CIM schema to 2.25

2010-04-14  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* msgqueue.c:
	[ 2979043 ] Fix leak in msgqueue.c during an error condition
	(patch by John Powell)

	* queryStatement.c, providerDrv.c:
	[ 2979036 ] Always reset lexer and add error handing to activateFilter()
	(patch by John Powell)
	
2010-04-13  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* dbpAdapter.c, sqlLexer.l, sqlParser.y, sqlStatement.c, sqlStatement.h:
	[ 2978514 ] Compilation with --enable-jdbc fails
	(patch by Klaus Kampf)

2010-04-09  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimXmlGen.c:
	[ 2984214 ] double free error cimXmlGen.c: triggered by AssocatorNames
	(patch by Chad Smith)

2010-04-07  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimcClientSfcbLocal.c, sfcBroker.c, mlog.h, mlog.c:
	[ 2982924 ] Use a logging process to write to syslog

	* providerDrv.c:
	[ 2979028 ] Modify SFCB to not abort for socket errors
	(patch by John Powell)

	* queryStatement.c:
	[ 2979030 ] Restart the lexer when filter creation ends in a parsing err
	(patch by John Powell)
	
2010-04-01 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* 20_indication.mof, profileProvider.c, interopServerProvider.c: