@@ -4,7 +4,7 @@
 <SIMPLERSP>
 <IMETHODRESPONSE NAME="CreateInstance">
 <IRETURNVALUE>
-<INSTANCENAME CLASSNAME="SFCB_IndicationSubscription">
+<INSTANCENAME CLASSNAME="CIM_IndicationSubscription">
 <KEYBINDING NAME="Filter">
 <VALUE.REFERENCE>
 <LOCALINSTANCEPATH>
